<resources>
    <string name="app_name">SnapStudies</string>
    <string name="welcome_message">Välkommen!</string>
    <string name="initial_description">Här kan du öva in dina glosor\nenkelt och effektivt🤩</string>
    <string name="button_add_words">Lägg till glosor</string>
    <string name="button_start_practice">Öva på glosor</string>
    <string name="button_statistics">Statistik</string>
    <string name="button_next_word">Lägg till ord</string>
    <string name="button_done_adding_words">KLAR och redo för övning!</string>
    <string name="textview_word_no">Ord %d</string>
    <string name="wrong_answer1">OOUPS...</string>
    <string name="wrong_answer2">Tyvärr svarade du fel, testa igen! 🙈</string>
    <string name="continue_right_wrong">Tryck för att fortsätta.</string>
    <string name="right_answer1">YEEEY!!!</string>
    <string name="right_answer2">Du svarade helt rätt, bra jobbat.🌟</string>
    <string name="end_practice">Du fick %d rätt!🥳</string>
    <!--TextView for -->
    <string name="statistics_text">På senast inlagda glosorna har du övat %d gånger.</string>>
       <string name="statistics_text2">Senaste omgången lyckades du kamma hem %d av %d rätt!</string>
    <string name="statistics_continue">Kämpa på!🔥</string>
    <string name="opened_cards">%d/%d</string>
</resources>