<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".CreateCardsActivity">

    <Button
        android:id="@+id/backButtonCards"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:background="@drawable/back_button_background"
        android:foreground="@drawable/back_button_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="325dp"
        android:layout_height="350dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/rounded_card_background"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWordNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bellota"
        android:text="@string/textview_word_no"
        android:textSize="34sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/editKeySwedishWord"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/bellota_text"
        android:hint="Svenska"
        android:inputType="text"
        android:maxLength="15"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:textColorHint="#4A4A4A"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textViewWordNo" />

    <EditText
        android:id="@+id/editValueEnglishWord"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/bellota_text"
        android:hint="Engelska"
        android:inputType="text"
        android:maxLength="15"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:textColorHint="#4A4A4A"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/editKeySwedishWord" />


    <Button
        android:id="@+id/buttonAddWord"
        style="@style/MyButtonStyle"
        android:layout_width="130dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="#88E5F1"
        android:elevation="11dp"
        android:fontFamily="@font/bellota_text"
        android:text="@string/button_next_word"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editValueEnglishWord" />

    <Button
        android:id="@+id/buttonDone"
        style="@style/MyButtonStyle"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="#BEFF73"
        android:fontFamily="@font/bellota_text"
        android:text="@string/button_done_adding_words"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>